<resources>

    <string-array name="directions">
        <item>ascending</item>
        <item>descending</item>
        <item>harmonic</item>
        <item>mixed</item>
    </string-array>

    <string name="app_name">MusicApp</string>
    <string name="intervals">Intervals</string>
    <string name="chords">Chords</string>
    <string name="scales">Scales</string>
    <string name="add">Add</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dont_have_account">Dont have an account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="exercises">Exercises</string>
    <string name="components">Components</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="duration">duration</string>
    <string name="vertical">vertical</string>
    <string name="hint">hint</string>
    <string name="direction">direction</string>
    <string name="choose_the_direction">Direction: </string>
    <string name="exercise_name">exercise name</string>
    <string name="number_of_questions">number of questions</string>
    <string name="repeat">repeat</string>
    <string name="name">name</string>
    <string name="content">content</string>
</resources>