<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:autofillHints="Email"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_margin="7dp"
            android:autofillHints="Password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_margin="7dp"
            android:padding="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_alignParentEnd="true"
            android:layout_margin="7dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </RelativeLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="7dp"
        android:padding="12dp"
        android:text="@string/dont_have_account"
        android:textAllCaps="false"
        android:textSize="18sp" />

</RelativeLayout>