<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseEditorActivity">

    <TextView
        android:id="@+id/editor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editor_title"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_component_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="5sp"
                android:background="@drawable/round_primary"
                android:drawableEnd="@drawable/icon_add"
                android:padding="5dp"
                android:text=""
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/create_component_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="5sp"
                android:background="@drawable/round_primary"
                android:drawableEnd="@drawable/icon_add"
                android:padding="5dp"
                android:text=""
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/direction_tv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/choose_the_direction"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/directionSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/direction_tv"
                android:hint="@string/direction" />

        </RelativeLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/exercise_name"
            android:inputType=""
            android:textSize="26sp" />

        <EditText
            android:id="@+id/number_of_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/number_of_questions"
            android:inputType="number"
            android:textSize="26sp" />

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5sp"
        android:padding="12dp"
        android:text="@string/add"
        android:textSize="18sp" />

</RelativeLayout>